--- a/a1.html
+++ b/a1.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>O1</title>
+    <title>A1</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Page O1</h1>
-    <p>Bienvenue sur la page O1.</p>
+    <h1>Page A1</h1>
+    <p>Bienvenue sur la page A1.</p>
     <a href="index.html">Retour à l'organigramme</a>
 </body>
 </html>
